# yams

./: .actrc  .build.yml  .clang-format  .clang-tidy  .clangd  .cppcheck-suppressions  .dockerignore  .gitignore  .gitmodules  .infer-suppress  .opengrepignore  .quality-deadcode-ignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CRUSH.md  CppProperties.json  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MCP_APPS_IMPLEMENTATION_PLAN.md  MCP_PROTOCOL_COMPLIANCE.md  NOTICE  README.md  SECURITY.md  bench_profile.json  commitlint.config.js  conanfile.py  install.sh  meson.build  meson_options.txt  (+6 more)
meson/: fts5_check.cpp  meson.build
meson/profiles/: ci-fast.ini  ide.ini  nightly-soak.ini
plugins/: meson.build
plugins/glint/: README.md  gliner_session.cpp  gliner_session.h  meson.build  plugin.cpp
plugins/hound/: README.md
plugins/object_storage_s3/: CMakeLists.txt  README.md  meson.build  s3_plugin.cpp
plugins/onnx/: CMakeLists.txt  README.md  meson.build  model_provider.cpp  model_provider.h  onnx_colbert_session.cpp  onnx_gpu_provider.h  onnx_model_pool.cpp  onnx_plugin.cpp  onnx_reranker_session.cpp  onnx_text_processing.cpp  ort_cxx_api_wrapper.h  ort_runtime_loader.cpp  ort_runtime_loader.h
plugins/pdf_extractor/: CMakeLists.txt  meson.build  pdf_content_handler.cpp  pdf_content_handler.h  pdf_extractor.cpp  pdf_extractor.h  pdf_extractor_plugin.cpp  plugin_manifest.json
plugins/symbol_extractor_treesitter/: grammar_loader.cpp  grammar_loader.h  meson.build  plugin_api.cpp  symbol_extractor.cpp  symbol_extractor.h  symbol_extractor_plugin.cpp
plugins/zyp/: meson.build  pdf_metadata.cpp  pdf_metadata.h  plugin_manifest.json  zpdf.h  zpdf_wrapper.cpp  zpdf_wrapper.h  zyp_plugin.cpp
src/: CMakeLists.txt
src/api/: CMakeLists.txt  async_content_store.cpp  content_metadata.cpp  content_store_builder.cpp  content_store_impl.cpp  meson.build  metadata_api.cpp  progress_reporter.cpp  raw_text_storage.cpp  semantic_search_api.cpp
src/app/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  internal_event_bus_benchmark.cpp  meson.build  vector_benchmark.cpp
src/chunking/: CMakeLists.txt  meson.build  rabin_chunker.cpp  streaming_chunker.cpp
src/cli/: CMakeLists.txt  asio_client_pool.cpp  cmd_download.cpp  command_registry.cpp  doctor_checks.cpp  graph_explore_presenter.cpp  graph_helpers.cpp  graph_query_execution.cpp  graph_query_presenter.cpp  graph_scope_support.cpp  graph_topology_presenter.cpp  graph_topology_support.cpp  hot_cold_utils.h  init_assets.cpp  meson.build  plugin_util.cpp  progress_indicator.cpp  search_runner.cpp  session_store.cpp  time_parser.cpp  tune_runner.cpp  vector_db_util.cpp  yams_cli.cpp  yams_cli_utils.cppm
src/compression/: CMakeLists.txt  compression_header.cpp  compression_monitor.cpp  compression_policy.cpp  compression_registry.cpp  compression_scheduler.cpp  compression_utils.cpp  error_handler.cpp  integrity_validator.cpp  lzma_compressor.cpp  lzma_compressor.h  meson.build  recovery_manager.cpp  transaction_manager.cpp  zstandard_compressor.cpp  zstandard_compressor.h
src/config/: CMakeLists.txt  config_helpers.cpp  config_migration.cpp  config_resolver_policies.cpp  meson.build
src/content/: CMakeLists.txt  archive_content_handler.cpp  audio_content_handler.cpp  binary_content_handler.cpp  buffer_processing_helpers.hpp  content_handler_registry.cpp  image_content_handler.cpp  meson.build  pdf_content_handler.cpp  text_content_handler.cpp  video_content_handler.cpp
src/core/: CMakeLists.txt  meson.build  module_meson.build  yams_core.cppm  yams_core_impl.cpp
src/crypto/: CMakeLists.txt  meson.build  sha256_hasher.cpp
src/daemon/: CMakeLists.txt  daemon.cpp  daemon_lifecycle.cpp  daemon_main.cpp  embedded_service_host.cpp  meson.build  tracy_memory_hooks.cpp  unix_ipc_server.cpp
src/detection/: CMakeLists.txt  file_type_detector.cpp  meson.build
src/downloader/: CMakeLists.txt  disk_writer.cpp  download_integrity_verifier.cpp  download_manager.cpp  http_adapter_curl.cpp  integrity_verifier.cpp  meson.build  rate_limiter.cpp  resume_store.cpp
src/embedding_simeon/: meson.build  simeon_embedding_backend.cpp
src/extraction/: CMakeLists.txt  builtin_text_content_extractor.cpp  external_plugin_extractor.cpp  extraction_util.cpp  html_text_extractor.cpp  jsonrpc_client.cpp  meson.build  pdf_extractor.cpp  plain_text_extractor.cpp  plugin_process.cpp  text_extractor_factory.cpp  text_extractor_utils.cpp  title_util.cpp
src/genai/: meson.build  onnx_genai_adapter.cpp
src/indexing/: CMakeLists.txt  document_indexer.cpp  indexing_pipeline.cpp  meson.build
src/ingest/: ingest_helpers.cpp  meson.build
src/integrity/: CMakeLists.txt  chunk_validator.cpp  integrity_verifier.cpp  meson.build  repair_manager.cpp  verification_monitor.cpp  verification_scheduler.cpp
src/manifest/: CMakeLists.txt  manifest_manager.cpp  meson.build
src/mcp/: CMakeLists.txt  http_server.cpp  mcp_cancellation.cpp  mcp_code_mode.cpp  mcp_handshake.cpp  mcp_prompts.cpp  mcp_request_routing.cpp  mcp_resources.cpp  mcp_server.cpp  mcp_server_handlers.cpp  mcp_server_tool_registry.cpp  mcp_server_transport.cpp  mcp_tool_calls.cpp  mcp_ui_resources.cpp  meson.build  mode_router.cpp  stdio_transport.cpp  tool_registry.cpp
src/metadata/: CMakeLists.txt  connection_pool.cpp  content_index_writer.cpp  database.cpp  kg_relation_summary.cpp  kg_topology_analysis.cpp  kg_write_buffer.cpp  knowledge_graph_store_sqlite.cpp  meson.build  metadata_insert_writer.cpp  metadata_repository.cpp  migration.cpp  path_utils.cpp  query_helpers.cpp  tree_builder.cpp  tree_differ.cpp  versioning_util.cpp
src/mobile/: meson.build  mobile_bindings.cpp
src/plugins/: meson.build  plugin_installer.cpp  plugin_repo_client.cpp
src/repair/: CMakeLists.txt  (+2 more)
tests/: .clang-tidy  CATCH2_PATTERNS.md  CMakeLists.txt  README.md  meson.build  test_main.cpp
tools/: CMakeLists.txt  hound_import.py
(+2391 files in other folders)
